--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
-*.log
+# Node.js
+node_modules/
+
+# Build output
+/dist/
+/build/
+/out/
+
+# Environment variables
+.env
+.env.local
+
+# Vite
+vite.config.js
+vite.env.js
+vite.config.mjs
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+.pnp.*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Editor-specific files
+.vscode/
+.idea/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS-generated files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Tailwind CSS
+.cache/
+dist/
